# aoc_2025

./: .gitignore  Makefile  aoc_2025.ml  aoc_2025.t  aoc_2025_01.ml  aoc_2025_02.ml  aoc_2025_03.ml  aoc_2025_04.ml  aoc_2025_05.ml  aoc_2025_06.ml  aoc_2025_07.ml  aoc_2025_08.ml  aoc_2025_09.ml  aoc_2025_10.ml  aoc_2025_11.ml  aoc_2025_12.ml  daily_template.ml  dune  dune-project  shared.ml
aoc_2025_10_glpsol.t/: example_1_min.gmpl  run.t
glpk/: dune
glpk/aoc_2025_10_glpsol.t/: example_1_max.gmpl  example_3_min.gmpl
inputs/: 01.txt
