(library
 (name aoc_2025_01)
 (modules aoc_2025_01)
 (inline_tests
  (deps
   (file inputs/01.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_02)
 (modules aoc_2025_02)
 (inline_tests
  (deps
   (file inputs/02.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_03)
 (modules aoc_2025_03)
 (inline_tests
  (deps
   (file inputs/03.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_04)
 (modules aoc_2025_04)
 (inline_tests
  (deps
   (file inputs/04.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name shared)
 (modules shared))
