(library
 (name aoc_2025_01)
 (modules aoc_2025_01)
 (inline_tests
  (deps
   (file inputs/01.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_02)
 (modules aoc_2025_02)
 (inline_tests
  (deps
   (file inputs/02.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_03)
 (modules aoc_2025_03)
 (inline_tests
  (deps
   (file inputs/03.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_04)
 (modules aoc_2025_04)
 (inline_tests
  (deps
   (file inputs/04.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_05)
 (modules aoc_2025_05)
 (inline_tests
  (deps
   (file inputs/05.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared bignum))

(library
 (name aoc_2025_06)
 (modules aoc_2025_06)
 (inline_tests
  (deps
   (file inputs/06.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_07)
 (modules aoc_2025_07)
 (inline_tests
  (deps
   (file inputs/07.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_08)
 (modules aoc_2025_08)
 (inline_tests
  (deps
   (file inputs/08.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_09)
 (modules aoc_2025_09)
 (inline_tests
  (deps
   (file inputs/09.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_10)
 (modules aoc_2025_10)
 (inline_tests
  (deps
   (file inputs/10.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared unix))

(library
 (name aoc_2025_11)
 (modules aoc_2025_11)
 (inline_tests
  (deps
   (file inputs/11.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_12)
 (modules aoc_2025_12)
 (inline_tests
  (deps
   (file inputs/12.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(executable
 (name daily_template)
 (modules daily_template)
 (libraries))

(library
 (name shared)
 (modules shared)
 (libraries bignum))
