(library
 (name aoc_2025_01)
 (modules aoc_2025_01)
 (inline_tests
  (deps
   (file inputs/01.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_02)
 (modules aoc_2025_02)
 (inline_tests
  (deps
   (file inputs/02.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_03)
 (modules aoc_2025_03)
 (inline_tests
  (deps
   (file inputs/03.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_04)
 (modules aoc_2025_04)
 (inline_tests
  (deps
   (file inputs/04.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_05)
 (modules aoc_2025_05)
 (inline_tests
  (deps
   (file inputs/05.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared bignum))

(library
 (name aoc_2025_06)
 (modules aoc_2025_06)
 (inline_tests
  (deps
   (file inputs/06.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_07)
 (modules aoc_2025_07)
 (inline_tests
  (deps
   (file inputs/07.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_08)
 (modules aoc_2025_08)
 (inline_tests
  (deps
   (file inputs/08.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_09)
 (modules aoc_2025_09)
 (inline_tests
  (deps
   (file inputs/09.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_10)
 (modules aoc_2025_10)
 (inline_tests
  (deps
   (file inputs/10.txt)
   %{bin:glpsol}))
 (preprocess
  (pps ppx_expect))
 (libraries shared unix))

(library
 (name aoc_2025_11)
 (modules aoc_2025_11)
 (inline_tests
  (deps
   (file inputs/11.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(library
 (name aoc_2025_12)
 (modules aoc_2025_12)
 (inline_tests
  (deps
   (file inputs/12.txt)))
 (preprocess
  (pps ppx_expect))
 (libraries shared))

(executable
 (public_name aoc_2025)
 (name aoc_2025)
 (modules aoc_2025)
 (libraries
  aoc_2025_01
  aoc_2025_02
  aoc_2025_03
  aoc_2025_04
  aoc_2025_05
  aoc_2025_06
  aoc_2025_07
  aoc_2025_08
  aoc_2025_09
  aoc_2025_10
  aoc_2025_11
  aoc_2025_12
  shared))

(executable
 (name daily_template)
 (modules daily_template)
 (libraries))

(library
 (name shared)
 (modules shared)
 (libraries bignum))

(cram
 (deps
  %{bin:aoc_2025}
  (source_tree inputs)))
